--- a/furfuturefunding/src/components/CreateOpportunityForm.css
+++ b/furfuturefunding/src/components/CreateOpportunityForm.css
@@ -1,6 +1,6 @@
 .create-opportunity-page {
   min-height: 100vh;
-  background-image: url("src/img/ramcats_1.png");
+  background-image: url(https://1drv.ms/i/c/42e13c4316a5d144/IQQBprp3UFxmQ5gXu1OG-nkDAUI5rAqvtSFxKm5tJH7t6_g);
   position: relative;
   overflow: hidden;
   margin-top: 6rem;
